--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>Repository test</h1>
-    
+    <h1>Our menu</h1>
+
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12 ">
+            <div class="region" id="ch">Chicken</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aliquid ratione perspiciatis architecto, sunt, maxime aliquam doloremque ipsum iusto eligendi minima alias sint soluta nemo eos quod sapiente maiores. Tempore.</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 ">
+            <div class="region" id="bee">Beef</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aliquid ratione perspiciatis architecto, sunt, maxime aliquam doloremque ipsum iusto eligendi minima alias sint soluta nemo eos quod sapiente maiores. Tempore.</p>
+        </div>
+        <div class="col-lg-4 su col-sm-12 ">
+            <div class="region" id="su">Sushi</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aliquid ratione perspiciatis architecto, sunt, maxime aliquam doloremque ipsum iusto eligendi minima alias sint soluta nemo eos quod sapiente maiores. Tempore.</p>
+        </div>
+    </div>
 </body>
 </html>
+
