--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-color  ">
             <a class="" href="#">
                 <div id="logo-div" alt="logo-img">
-                    <img id="logo-img" src="../IMG/favicon-32x32.png" alt="icon">
+                    <img id="logo-img" src="IMG/favicon-32x32.png" alt="icon">
                 </div>  
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
