Add new sections

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
     <div class="col-lg-2 rooms">Available Rooms</div>
     <div id="availableRooms" class="col-lg-2 rooms"></div>
 </div>
+
+<div id="lastModif"></div>
+<div id="message"></div>
     <script src="JS/index.js">   </script>
     
       <script src="JS/Coursera_mod4/SpeakHello.js"></script>
